fixed nav center on mobile

--- a/style.css
+++ b/style.css
@@ -156,6 +156,7 @@ p {
 		display: flex;
 		justify-content: center;
 		align-items: center;
+		left: 0vw;
 	}
 
 	ul {
